--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^4.0.5",
     "web-vitals": "^2.1.4",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "reactstrap": "^8.10.0"
   },
 
   "scripts": {
