--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-simple-star-rating": "^4.0.5",
     "web-vitals": "^2.1.4",
     "react-redux": "^8.0.2",
-    "reactstrap": "^8.10.0"
+    "reactstrap": "^8.10.0",
+    "react-spinners": "^0.13.6"
   },
 
   "scripts": {
