--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "web-vitals": "^2.1.4",
     "react-redux": "^8.0.2",
     "reactstrap": "^8.10.0",
-    "react-spinners": "^0.13.6"
+    "react-spinners": "^0.13.6",
+    "react-bootstrap": "^2.4.0"
 
   },
 
